# MindTheGap

./: .gitignore  CMakeLists.txt
Ex10_Platformer/: PlatformerGame.cpp  SideScrollingCamera.cpp  SideScrollingCamera.hpp
Ex8_Bird/: BirdController.hpp  BirdGame.cpp  BirdGame.hpp
MindTheGap/: BackgroundComponent.cpp  BackgroundComponent.hpp  BirdGame.cpp  BirdGame.hpp  CMakeLists.txt  CharacterControllerComponent.cpp  CharacterControllerComponent.hpp  DoublePhysicsComponent.cpp  DoublePhysicsComponent.hpp  FighterCamera.cpp  FighterCamera.hpp  GUI_SpriteSheet.json  GameManager.cpp  GameManager.hpp  GameObject.cpp  GameObject.hpp  GravityComponent.cpp  GravityComponent.hpp  MapLoader.cpp  MapLoader.h  Map_1.json  Map_1_SpriteSheet.json  Map_2.json  Map_2_SpriteSheet.json  Map_3.json  Map_3_SpriteSheet.json  OPP_Sheet.json  PhysicsComponent.cpp  PhysicsComponent.hpp  SideScrollingCamera.cpp  SpriteAnimationComponent.cpp  SpriteAnimationComponent.hpp  SpriteComponent.cpp  SpriteComponent.hpp  main.cpp  test_map_squared.json  test_map_squared1.json  test_map_squared1_spritesheet.json  test_map_squared_spritesheet.json  tmxlite-s-d.lib
project/platformer/: PlatformerGame.cpp  PlatformerGame.hpp
